[metadata]
name = performance-monitor-jesjack
version = 0.1.1
author = jesjack
author_email = jesjack25_03@hotmail.com
description = Herramienta para monitorear métricas de ejecución
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jesjack/performance_monitor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
# lee tu requirements.txt aquí manualmente o usa una herramienta

[options.packages.find]
where = src
